--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "crypto-js": "^4.2.0",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "mongoose": "^8.4.5",
     "socket.io": "^4.7.5"
